[package]
name = "pico-w-http"
version = "0.1.0"
edition = "2021"

# rust-analyzerでno_std特有の警告が出るのを防ぐ
[[bin]]
name = "pico-w-http"
path = "src/main.rs"
test = false
doctest = false
bench = false

# cargo run --release 時の設定
[profile.release]
opt-level = "s"
debug = false

[dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "task-arena-size-98304"] }
embassy-rp = { version = "0.3.0", features = ["time-driver", "critical-section-impl", "rp2040"] }
embassy-net = { version = "0.6.0", features = ["tcp", "dhcpv4", "dns", "proto-ipv4"] }
embassy-time = "0.4.0"
embassy-usb-logger = "0.4.0"

cyw43 = "0.3.0"
cyw43-pio = "0.3.0"

log = "0.4.26"
panic-halt = "1.0.0"

cortex-m-rt = "0.7.0"

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

rand_core = "0.6.4"
rand = { version = "0.8.5", default-features = false }

reqwless = "0.13.0"
